# Jobs_scrapper

./: LICENSE  README.md
Google jobs/: googlejobs.py  jobs.db.json  requirements.txt
h1bjobs/: h1bDataJobs.json  h1bjobs.py
start__up_jobs (rust)/: main.rs
start__up_jobs (rust)/startUpJobs/: Cargo.toml
start__up_jobs (rust)/startUpJobs/src/: main.rs
startupjobs bot (python)/: startup.jobs.py
