[package]
name = "startUpJobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
json = "0.12.4"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde_json = "1.0.94"
webbrowser = "0.8.7"
